.k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-nodejs-app
  template:
    metadata:
      labels:
        app: my-nodejs-app
    spec:
      containers:
      - name: my-nodejs-app
        image: ghcr.io/hardikhari96/kubectl/cv:latest
        imagePullPolicy: Always
      imagePullSecrets:
      - name: github-packages-secret
