.k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodejs-service
spec:
  selector:
    app: my-nodejs-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
