.k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nodejs-ingress
spec:
  ingressClassName: nginx  # Add this line
  rules:
    - host: haripatel.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nodejs-service
                port:
                  number: 3000
